2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/compat.py:
	  Trigger deprecation on using a function, not importing.  This way
	  we can get a call site that is not in ihooks.py and have a hope
	  of fixing them.

2008-08-27  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/launch/inspect.py:
	  These two lines print the same thing, so might as well show it only
	  once.

2008-08-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/wizard.py (WizardSidebar.jumpToStep): Sidebar is
	in wizard.

2008-08-27  Johan Dahlin  <johan@fluflumotion.com>

	* flumotion/component/producers/audiotest/audiotest.xml:
	* flumotion/component/producers/videotest/videotest.xml:
	Make the video/audio test component descriptions shorter

2008-08-27  Murray Cumming  <murrayc@murrayc.com>

	* data/glade/shout2-wizard.glade: Changed some labels and added some 
	tooltips to make this slightly less confusing.

2008-08-27  Pedro Gracia  <pedro@flumotion.com>

	* po/es.po:
        Spanish translation sync now.

2008-08-27  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/fileselector.py (FileSelector._rowActivated):
	raise NotImplementedError instead of just NotImplemented.

2008-08-26  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/worker/checks/gst010.py:
	New firewire stack does not create raw1394 device node so check
	for /dev/fw0 as well.

2008-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/common.py:
	* flumotion/admin/command/component.py:
	* flumotion/admin/command/manager.py:
	* flumotion/monitor/nagios/log.py:
	* flumotion/ui/fileselector.py:
	  pychecker cleanups.

2008-08-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/test/test_config.py:
	  Move config to the left so it doesn't exceed 80 chars after
	  renaming.  Maybe we should do this for all of them.

2008-08-26  Murray Cumming  <murrayc@murrayc.com>
