@@ -66,7 +66,7 @@ COVERAGE_MODULES = flumotion
 integration:
 	trial tests.integration
 
-check-local: check-local-pep8
+check-local: check-local-pep8 check-local-registry
 
 # generated by make check during make distcheck and translation stuff
 DISTCLEANFILES = \
